Player crud operations created, room crud operations 50%. Relocated randompatterngenerator() to RoomRepository to align with architecture, also it's now returning a string with the correct number of digits instead of a string that included square brackets
